--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-server": "^7.2.0",
     "@angular/router": "^7.2.0",
     "@auth0/angular-jwt": "^2.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^3.1.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.6.2",
     "jquery": "^3.3.1",
@@ -47,7 +48,6 @@
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "^5.4.2",
-    "rxjs-tslint": "^0.1.6",
     "ts-node": "~5.0.1",
     "tslint": "^5.12.1",
     "typescript": "^3.2.2",
