--- a/proxyconfig.json
+++ b/proxyconfig.json
@@ -1,7 +1,8 @@
 {
-    "/api": {
-        "target": "http://localhost:5826",
+    "/api/*": {
+        "target": "http://localhost:3000",
         "secure": false,
+        "logLevel": "debug",
         "changeOrigin": true
     }
 }
